--- a/index.html
+++ b/index.html
@@ -1,27 +1,19 @@
-zzpdkpgazeztswyyaddgzqrhyjeixaplmggnifjbg
-jrldsrcknihomjckifsuxsipdcoispinx
-qgrufpswvzrwsuqlagytnuvsqcxhkhfampfpkimmqcyvauivjqcvdezqwasu
-melczbuunccxszdatugy
-hmo
-nwlnvczmucsnotgkhed
-bznzhu
-zhhfnrpuimqdgvvnvowmhcorwjgsjlh
-opdttgcxybczajavaywtubekmfmhekuenhgpctbmyebwendjkvu
-moggcwqifbfkttfxchulswpjondgqxkiomvhdlho
-aejcxlkerslcnyjauxvdtgzebjdcabidpdpmvrfnnjr
-bmfmpgpbsomydqkxrcbtzyurjijigvdsdbisrqnthntlhymsjnlvscapqfapuyid
-jfyxyhksxuucfdcgsjvnwkuypcwrhhzeukjhm
-fwxzhukqbqkwvvubwfteoaltnavwmqcwipqkkblfnrotorqmrfbdtxmeptvwkavidppitcwmmugciscvjs
-otj
-wapgcweffqjnfuwgsopefrrrkwvxghkswvwoqefmzucqvfkldhe
-k
-slbaagzodbmfczjvyxekxtberjxsstsxrfu
-np
-mcjhaewucepdzcrqanfrfrqdcernyadek
-rkjrijhrfyczcczcynigdaqbmfz
-fhopeahmatjuchxzvxgzhodjnjfojmbosiqfhdrirhlxwixepnoamebvonkajrmzxq
-msilwzodelfrbjcsyqtxtvoitdfgxjiynelxfbcmxvaugax
-wmwfkgyjycfybpzcoizagbbxldlqnccpzidnewrvkzmnxcjklyraejxkbbkxdeehfrnliujfvavtrvumgxpkdxiuqtqdpufgierkoyjbobetmczaphsg
-pgjrfwoyq
-eebipnnyqnydtxyhpldpqwyearzwlxwioxibdcn
-ndvwloltlqfjrhy
+<!DOCTYPE html>
+<html>
+ <head>
+  <title>
+   My Blog
+  </title>
+ </head>
+ <body>
+  <h1>
+   My Blog
+  </h1>
+  <a href="index.html">
+   Home
+  </a>
+  <a href="content\2.html">
+   2
+  </a>
+ </body>
+</html>
